--- a/sass/twtcnangangcss/_conference_room.scss
+++ b/sass/twtcnangangcss/_conference_room.scss
@@ -110,6 +110,9 @@
     font-weight: bolder;
     float: right;
 }
+.roome_bottom{
+    border-bottom: 1px solid #cccccc;
+}
 .vip_gray{
     font-size: 1.2em;
     font-weight: bolder;
