--- a/sass/twtcnangangcss/_conference_room.scss
+++ b/sass/twtcnangangcss/_conference_room.scss
@@ -112,6 +112,11 @@
 }
 .roome_bottom{
     border-bottom: 1px solid #cccccc;
+    td{
+        padding: 10px;
+        margin-top: 0;
+        vertical-align: middle;
+    }
 }
 .vip_gray{
     font-size: 1.2em;
