--- a/sass/twtcnangangcss/_news.scss
+++ b/sass/twtcnangangcss/_news.scss
@@ -47,6 +47,9 @@
     color: #161616;
     font-size: 1.5em;
     font-weight: bolder;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .news_blue{
     background-color: #2da4c5;
