--- a/sass/twtcnangangcss/_aboutus.scss
+++ b/sass/twtcnangangcss/_aboutus.scss
@@ -273,3 +273,12 @@
         width: 100%;
     }
 }
+
+.on_btn{
+    position: absolute;
+    top:0;
+    right:0;
+    background-color: #ffffff;
+    border-radius: 100%;
+    color:$twt-blue;
+}
