--- a/css/main.css
+++ b/css/main.css
@@ -4048,9 +4048,12 @@ html {
 }
 
 .on_btn {
+  width: 34px;
+  height: 36px;
   position: absolute;
-  top: 0;
-  right: 0;
+  bottom: 150px;
+  right: 8px;
+  padding: 9px;
   background-color: #ffffff;
   border-radius: 100%;
   color: #024190;
