--- a/sass/twtcnangangcss/_aboutus.scss
+++ b/sass/twtcnangangcss/_aboutus.scss
@@ -284,15 +284,7 @@
     background-color: #ffffff;
     border-radius: 100%;
     color:$twt-blue;
-}
-.off_btn{
-    width: 34px;
-    height: 36px;
-    position: absolute;
-    bottom: 200px;
-    right: 8px;
-    padding: 9px;
-    background-color: #ffffff;
-    border-radius: 100%;
-    color:$twt-blue;
+    i{
+        font-size: 1.2em;
+    }
 }
