--- a/css/main.css
+++ b/css/main.css
@@ -4058,17 +4058,8 @@ html {
   border-radius: 100%;
   color: #024190;
 }
-
-.off_btn {
-  width: 34px;
-  height: 36px;
-  position: absolute;
-  bottom: 200px;
-  right: 8px;
-  padding: 9px;
-  background-color: #ffffff;
-  border-radius: 100%;
-  color: #024190;
+.on_btn i {
+  font-size: 1.2em;
 }
 
 @media only screen and (max-width: 1096px) {
