--- a/sass/twtcnangangcss/_touch_about.scss
+++ b/sass/twtcnangangcss/_touch_about.scss
@@ -38,7 +38,9 @@
         margin-left: 0;
         margin-top: 40px;
     }
-
+    .on_btn{
+        bottom: 30px;
+    }
 
 }
 @include respond-small-mobile{
