--- a/css/main.css
+++ b/css/main.css
@@ -4053,8 +4053,8 @@ html {
 }
 
 .on_btn {
-  width: 34px;
-  height: 36px;
+  width: 45px;
+  height: 45px;
   position: absolute;
   bottom: 150px;
   right: 8px;
@@ -4064,7 +4064,8 @@ html {
   color: #024190;
 }
 .on_btn i {
-  font-size: 1.2em;
+  font-size: 1.5em;
+  margin-top: 3px;
 }
 
 @media only screen and (max-width: 1096px) {
