--- a/sass/twtcnangangcss/_aboutus.scss
+++ b/sass/twtcnangangcss/_aboutus.scss
@@ -284,8 +284,9 @@
     background-color: #ffffff;
     border-radius: 100%;
     color:$twt-blue;
+    text-align: center;
     i{
-        font-size: 1.5em;
+        font-size: 1.6em;
         margin-top: 3px;
     }
 }
