--- a/css/main.css
+++ b/css/main.css
@@ -810,10 +810,9 @@ html {
 
 .traffic_bg {
   width: 100%;
-  height: 600px;
   background-image: url("../images/15.JPG");
   padding-bottom: 49%;
-  background-size: cover;
+  background-size: contain;
   position: relative;
   background-repeat: no-repeat;
 }
