--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -689,10 +689,10 @@ html {
 }
 .traffic_bg{
     width: 100%;
-    // height: 600px;
+    height: 600px;
     background-image: url("../images/15.JPG");
     padding-bottom: 49%;
-    background-size: contain;
+    background-size: cover;
     position: relative;
     background-repeat: no-repeat;
 }
