--- a/css/main.css
+++ b/css/main.css
@@ -1375,14 +1375,14 @@ html {
   }
 
   .traffic_bg {
-    height: none;
+    height: auto;
     padding-bottom: 90%;
     background-size: contain;
   }
 }
 @media only screen and (max-width: 768px) {
   .traffic_bg {
-    height: none;
+    height: auto;
     padding-bottom: 89%;
     background-size: contain;
   }
@@ -1600,7 +1600,7 @@ html {
 }
 @media only screen and (max-width: 480px) {
   .traffic_bg {
-    height: none;
+    height: auto;
     padding-bottom: 76%;
     background-size: contain;
   }
