--- a/sass/twtcnangangcss/_touch_twtcnangang.scss
+++ b/sass/twtcnangangcss/_touch_twtcnangang.scss
@@ -208,14 +208,14 @@
         margin: 40px auto;
     }
     .traffic_bg{
-        height: none;
+        height: auto;
         padding-bottom: 90%;
         background-size: contain;
     }
 }
 @include respond-mobile {
     .traffic_bg{
-        height: none;
+        height: auto;
         padding-bottom: 89%;
         background-size: contain;
     }
@@ -402,7 +402,7 @@
 }
 @include respond-small-mobile{
     .traffic_bg{
-        height: none;
+        height: auto;
         padding-bottom: 76%;
         background-size: contain;
     }
