--- a/sass/twtcnangangcss/_touch_twtcnangang.scss
+++ b/sass/twtcnangangcss/_touch_twtcnangang.scss
@@ -216,7 +216,7 @@
 @include respond-mobile {
     .traffic_bg{
         height: auto;
-        padding-bottom: 89%;
+        padding-bottom: 118%;
         background-size: contain;
     }
     .chun_wraper{
@@ -401,6 +401,11 @@
 
 }
 @include respond-small-mobile{
+    .traffic_bg{
+        height: auto;
+        padding-bottom:129%;
+        background-size: contain;
+    }
     .lili_box{
         margin-top:30px;
     }
