--- a/css/main.css
+++ b/css/main.css
@@ -4080,6 +4080,16 @@ html {
   margin-top: 8px;
 }
 
+.playicon {
+  position: absolute;
+  width: 50px;
+  top: 50%;
+  left: 50%;
+}
+.playicon img {
+  width: 100%;
+}
+
 @media only screen and (max-width: 1096px) {
   .tran_about li {
     width: 33% !important;
