--- a/sass/twtcnangangcss/_aboutus.scss
+++ b/sass/twtcnangangcss/_aboutus.scss
@@ -290,3 +290,12 @@
         margin-top: 8px;
     }
 }
+.playicon{
+    position: absolute;
+    width: 50px;
+    top:50%;
+    left:50%;
+    img{
+        width: 100%;
+    }
+}
