--- a/css/main.css
+++ b/css/main.css
@@ -4082,9 +4082,11 @@ html {
 
 .playicon {
   position: absolute;
-  width: 50px;
+  width: 110px;
   top: 50%;
   left: 50%;
+  margin-left: -55px;
+  margin-top: -55px;
 }
 .playicon img {
   width: 100%;
