--- a/css/main.css
+++ b/css/main.css
@@ -4082,11 +4082,12 @@ html {
 
 .playicon {
   position: absolute;
-  width: 110px;
+  width: 180px;
   top: 50%;
   left: 50%;
-  margin-left: -55px;
-  margin-top: -55px;
+  margin-left: -80px;
+  margin-top: -80px;
+  opacity: .5;
 }
 .playicon img {
   width: 100%;
