--- a/sass/twtcnangangcss/_aboutus.scss
+++ b/sass/twtcnangangcss/_aboutus.scss
@@ -281,7 +281,7 @@
     bottom: 150px;
     right: 48px;
     padding: 9px;
-    background-color: rgba("225,225,225,.3");
+    background-color: #ffffff;
     border-radius: 100%;
     color:$twt-blue;
     text-align: center;
