--- a/sass/twtcnangangcss/_aboutus.scss
+++ b/sass/twtcnangangcss/_aboutus.scss
@@ -290,6 +290,22 @@
         margin-top: 8px;
     }
 }
+.stop_btn{
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    bottom: 150px;
+    right: 48px;
+    padding: 9px;
+    background-color:rgba(225,225, 225,.3);
+    border-radius: 100%;
+    color:$twt-blue;
+    text-align: center;
+    i{
+        font-size: 2em;
+        margin-top: 8px;
+    }
+}
 .playicon{
     position: absolute;
     width: 180px;
