--- a/css/main.css
+++ b/css/main.css
@@ -2173,7 +2173,7 @@ video[poster] {
   position: relative;
   width: 100%;
   height: 250px;
-  background-image: url("../images/13.png");
+  background-image: url("../images/evt2.jpg");
   background-size: cover;
   cursor: pointer;
   transition: all 0.6s;
@@ -2189,7 +2189,7 @@ video[poster] {
   position: relative;
   width: 100%;
   height: 250px;
-  background-image: url("../images/14.png");
+  background-image: url("../images/evt.jpg");
   background-size: cover;
   cursor: pointer;
   transition: all 0.6s;
