--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -457,7 +457,7 @@
     position: relative;
     width: 100%;
     height: 250px;
-    background-image: url("../images/13.png");
+    background-image: url("../images/evt2.jpg");
     background-size: cover;
     cursor: pointer;
     transition: all 0.6s;
@@ -472,7 +472,7 @@
     position: relative;
     width: 100%;
     height: 250px;
-    background-image: url("../images/14.png");
+    background-image: url("../images/evt.jpg");
     background-size: cover;
     cursor: pointer;
     transition: all 0.6s;
