--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -152,7 +152,7 @@ html {
 
 .video-container {
     position: relative;
-    padding-bottom: 42%;
+    padding-bottom: 38%;
     // padding-top: 15px;
     height: 0;
     overflow: hidden;
@@ -970,4 +970,5 @@ html {
 }
 video[poster]{
   object-fit: cover;
+  width: 100%;
 }
