--- a/css/main.css
+++ b/css/main.css
@@ -1192,6 +1192,18 @@ video[poster] {
   .search_Bg_menu {
     display: block;
   }
+
+  .mobile_darkbg {
+    display: block;
+    background-color: #89b0d0;
+    width: 40%;
+    height: 100vh;
+    position: fixed;
+    z-index: 99;
+    overflow: scroll;
+    top: 0;
+    right: -40%;
+  }
 }
 @media only screen and (max-width: 1096px) {
   .mob_box {
