--- a/sass/twtcnangangcss/_touch_twtcnangang.scss
+++ b/sass/twtcnangangcss/_touch_twtcnangang.scss
@@ -54,6 +54,17 @@
     .search_Bg_menu{
         display: block;
     }
+    .mobile_darkbg{
+        display: block;
+        background-color:#89b0d0;
+        width: $menu-width-pad;
+        height: 100vh;
+        position: fixed;
+        z-index: 99;
+        overflow: scroll;
+        top:0;
+        right:-$menu-width-pad;
+    }
 }
 @include respond-pad {
     .mob_box{
