--- a/css/main.css
+++ b/css/main.css
@@ -4147,6 +4147,16 @@ video[poster] {
   width: 100%;
 }
 
+.opensearchbar {
+  width: 100%;
+  height: 42px;
+  position: fixed;
+  top: 64px;
+  right: 0px;
+  border-top: 2px solid #aad0ff;
+  background-color: #ffffff;
+}
+
 @media only screen and (max-width: 1096px) {
   .tran_about li {
     width: 33% !important;
