--- a/sass/twtcnangangcss/_aboutus.scss
+++ b/sass/twtcnangangcss/_aboutus.scss
@@ -319,3 +319,12 @@
         width: 100%;
     }
 }
+.opensearchbar{
+    width: 100%;
+    height: 42px;
+    position: fixed;
+    top: 64px;
+    right: 0px;
+    border-top: 2px solid #aad0ff;
+    background-color: #ffffff;
+}
