--- a/sass/twtcnangangcss/_aboutus.scss
+++ b/sass/twtcnangangcss/_aboutus.scss
@@ -331,6 +331,6 @@
         width: 100%;
     }
     input[placeholder]{
-        padding-right: 20px!important;
+        padding: 10px!important;
     }
 }
