--- a/sass/landing.scss
+++ b/sass/landing.scss
@@ -96,6 +96,13 @@ html {
   }
 }
 
+.logo50{
+  width: 200px;
+    position: absolute;
+    top: 25px;
+    right: 25px;
+}
+
 
 @include respond-cozy {
 
@@ -178,6 +185,11 @@ html {
 
 }
 @include respond-mobile {
+  .logo50{
+    width: 120px;
+    top: 15px;
+    right: 15px;
+  }
   .exblock{
     h2{
       span{
