--- a/css/main.css
+++ b/css/main.css
@@ -1131,6 +1131,10 @@ video[poster] {
   width: 100%;
 }
 
+a.bbt {
+  display: inline-block;
+}
+
 @media only screen and (max-width: 1239px) {
   .listline {
     margin: 0 5px;
@@ -1682,6 +1686,9 @@ video[poster] {
   .logo {
     max-width: 220px;
     min-width: 185px;
+  }
+  .logo.y50 {
+    min-width: 40px;
   }
 
   .rent_continer {
@@ -2474,9 +2481,6 @@ video[poster] {
 }
 
 a.bbt {
-  display: inline-block;
-}
-
 @media only screen and (max-width: 1239px) {
   .m-page-news_bn {
     background-image: url("../images/news/bgnews_wn.jpg");
