add mini screen

--- a/css/admin.css
+++ b/css/admin.css
@@ -41,6 +41,9 @@
  * Mobile Layout ( 0~700 )
  */
 /**
+ * Mobile Layout ( 0~380 )
+ */
+/**
  * Box-sizing
  */
 /**
@@ -3004,6 +3007,9 @@ html.touch body #query-list .container::-webkit-scrollbar-thumb:window-inactive 
  */
 /**
  * Mobile Layout ( 0~700 )
+ */
+/**
+ * Mobile Layout ( 0~380 )
  */
 /**
  * Box-sizing
