--- a/sass/twtcnangangcss/_touch_about.scss
+++ b/sass/twtcnangangcss/_touch_about.scss
@@ -16,6 +16,9 @@
     .on_btn{
         bottom: 52px;
     }
+    .stop_btn{
+        bottom: 120px;
+    }
 }
 @include respond-mobile {
     .tran_about{
