--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -708,3 +708,14 @@ a{
     display: inline-block;
   }
 }
+
+.faceid{
+    text-align: center;
+    img{
+        width: 40%;
+    }
+    li{
+        font-size: 1.2em;
+    font-weight: bolder;
+    }
+}
