--- a/css/main.css
+++ b/css/main.css
@@ -1140,6 +1140,20 @@ a.bbt {
   display: inline-block;
 }
 
+.uken {
+  margin-left: 30px;
+}
+.uken li {
+  margin-bottom: 10px;
+  line-height: 2;
+}
+.uken li::before {
+  content: "※";
+  margin-right: 10px;
+  font-size: 1em;
+  margin-left: -30px;
+}
+
 @media only screen and (max-width: 1239px) {
   .listline {
     margin: 0 5px;
