update vr mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1470,6 +1470,11 @@ a.bbt {
   .view_bg {
     height: 418px;
     background-position: 0 236px;
+    background-image: none;
+  }
+
+  .view_font {
+    top: -30px;
   }
 
   .tra_blue {
