--- a/sass/twtcnangangcss/_touch_twtcnangang.scss
+++ b/sass/twtcnangangcss/_touch_twtcnangang.scss
@@ -262,6 +262,10 @@
     .view_bg {
     height: 418px;
     background-position: 0 236px;
+    background-image: none;
+    }
+    .view_font{
+      top:-30px;
     }
 
     .tra_blue{
