--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -66,6 +66,14 @@ html {
       width: 130px;
       padding-top: 10px;
     }
+    &.icon5{
+      width: auto;
+      padding-top: 10px;
+      img{
+        width: auto;
+        height: auto;
+      }
+    }
 }
 
 .rightBox {
