--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -69,9 +69,11 @@ html {
     &.icon5{
       width: auto;
       padding-top: 10px;
+      margin-left: 15px;
       img{
         width: auto;
         height: auto;
+        margin-right: 3px;
       }
     }
 }
