--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -66,16 +66,6 @@ html {
       width: 130px;
       padding-top: 10px;
     }
-    &.icon5{
-      width: auto;
-      padding-top: 10px;
-      margin-left: 15px;
-      img{
-        width: auto;
-        height: auto;
-        margin-right: 3px;
-      }
-    }
 }
 
 .rightBox {
@@ -448,6 +438,13 @@ html {
     // grid-template-columns: 1fr 1fr 1fr;
     // grid-column-gap:20px;
 
+}
+.icon5{
+  img{
+    width: auto;
+    height: auto;
+    margin-right: 3px;
+  }
 }
 .copy{
     width: 50%;
